Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -35,7 +35,7 @@
    "source": [
     "# Your solution\n",
     "\n",
-    "pr_red_given_hat_1 = "
+    "pr_red_given_hat_1 = 4/10\n"
    ]
   },
   {
