Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -36,7 +36,9 @@
     "# Your solution\n",
     "\n",
     "pr_red_given_hat_1 = 4/10\n",
-    "pr_red_given_hat_2 = 4/10\n"
+    "pr_red_given_hat_2 = 6/10\n",
+    "\n",
+    "pr_red = 1/2 * pr_\n"
    ]
   },
   {
