--- a/index.ipynb
+++ b/index.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,8 @@
     "pr_red_given_hat_1 = 4/10\n",
     "pr_red_given_hat_2 = 6/10\n",
     "\n",
-    "pr_red = 1/2 * pr_\n"
+    "pr_red = 1/2 * pr_red_given_hat_1 + 1/2 * pr_red_given_hat_2\n",
+    "pr_red"
    ]
   },
   {
