Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -122,7 +122,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your solution"
+    "# Your solution\n",
+    "\n"
    ]
   },
   {
