Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,10 @@
     "G3 = 0.25\n",
     "\n",
     "F1 = 0.3\n",
-    "F2 = 0."
+    "F2 = 0.6\n",
+    "F3 = 0.5\n",
+    "\n",
+    "P_F_and_"
    ]
   },
   {
