--- a/index.ipynb
+++ b/index.ipynb
@@ -132,8 +132,15 @@
     "F2 = 0.6\n",
     "F3 = 0.5\n",
     "\n",
-    "P_F_and_"
+    "P_F_and_G2 = "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
