--- a/index.ipynb
+++ b/index.ipynb
@@ -118,9 +118,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.21"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your solution\n",
     "\n",
@@ -132,7 +143,8 @@
     "F2 = 0.6\n",
     "F3 = 0.5\n",
     "\n",
-    "P_F_and_G2 = "
+    "P_F_and_G2 = G2 * F2\n",
+    "P_F_and_G2"
    ]
   },
   {
