Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -143,6 +143,7 @@
     "F2 = 0.6\n",
     "F3 = 0.5\n",
     "\n",
+    "\n",
     "P_F_and_G2 = G2 * F2\n",
     "P_F_and_G2"
    ]
@@ -174,6 +175,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "P_F_and_G1 = G1 \n",
+    "\n",
     "P_G1_given_F = "
    ]
   },
