Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -171,13 +171,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'P_G1' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-f665ac99d93d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mP_G1_given_F\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mP_F_and_G1\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mP_F\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mP_G1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'P_G1' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "P_F_and_G1 = G1 \n",
+    "P_F_and_G1 = G1*F1\n",
     "\n",
-    "P_G1_given_F = "
+    "P_G1_given_F = P_F_and_G1 / P_F\n",
+    "P_G1"
    ]
   },
   {
