--- a/index.ipynb
+++ b/index.ipynb
@@ -223,7 +223,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your solution"
+    "# Your solution\n",
+    "\n"
    ]
   },
   {
