Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -244,6 +244,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "P_none = (1-OB1) * (1-OB2)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
