--- a/index.ipynb
+++ b/index.ipynb
@@ -249,7 +249,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "P_none = (1-OB1) * (1-OB2)"
+    "P_none_ = (1-OB1) * (1-OB2) * (1-OB3)\n",
+    "P_at_leastOne = "
    ]
   },
   {
