Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -249,8 +249,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "P_none_OB = (1-OB1) * (1-OB2) * (1-OB3)\n",
-    "P_atleastone_not_OB = 1 - "
+    "P_atleastone_not_OB = 1 - P_all_OB"
    ]
   },
   {
