--- a/index.ipynb
+++ b/index.ipynb
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
        "0.034999999999999996"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,29 @@
     "OB2 = 0.25\n",
     "OB3 = 0.35\n",
     "\n",
-    "OB1 * OB2 * OB3"
+    "P_all_OB = OB1 * OB2 * OB3\n",
+    "P_all_OB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.965"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "P_atleastone_not_OB = 1 - P_all_OB\n",
+    "P_atleastone_not_OB"
    ]
   },
   {
@@ -248,9 +270,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "P_atleastone_not_OB = 1 - P_all_OB"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
