Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -270,7 +270,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "P_exact_one_OB = (1-OB1)*OB2"
+   ]
   },
   {
    "cell_type": "markdown",
