--- a/index.ipynb
+++ b/index.ipynb
@@ -271,7 +271,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "P_exact_one_OB = (1-OB1)*OB2"
+    "P_exact_one_OB = (1-OB1)*(OB2)*(OB3) + (OB1)*(OB2)*(OB3) + (1-OB1)*(OB2)*(OB3) "
    ]
   },
   {
