Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -267,11 +267,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2225"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "P_exact_one_OB = (1-OB1)*(OB2)*(OB3) + (OB1)*(OB2)*(OB3) + (1-OB1)*(OB2)*(OB3) "
+    "P_exact_one_OB = (1-OB1)*(OB2)*(OB3) + (OB1)*(1-OB2)*(OB3) + (OB1)*(OB2)*(1-OB3) \n",
+    "P_exact_one_OB"
    ]
   },
   {
