Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -267,22 +267,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.2225"
+       "0.45000000000000007"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "P_exact_one_OB = (1-OB1)*(OB2)*(OB3) + (OB1)*(1-OB2)*(OB3) + (OB1)*(OB2)*(1-OB3) \n",
+    "P_exact_one_OB = (1-OB1)*(1-OB2)*(OB3) + (OB1)*(1-OB2)*(1-OB3) + (1-OB1)*(OB2)*(1-OB3) \n",
     "P_exact_one_OB"
    ]
   },
