--- a/index.ipynb
+++ b/index.ipynb
@@ -308,7 +308,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your solution"
+    "# Your solution\n",
+    "\n",
+    "1/3 * (75/100)"
    ]
   },
   {
